# ReflexFiles

./: .gitignore  CHANGELOG.md  LICENSE  README.md  user_manual.md
.claude/: settings.json  settings.local.json
app/: .gitignore  README.ja.md  README.md  jsconfig.json  package-lock.json  package.json  vite.config.js
app/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: user_manual.en.html  user_manual.en.md  user_manual.ja.html  user_manual.ja.md  user_manual.md
app/src-tauri/src/: bootstrap.rs  clipboard.rs  clipboard_cmds.rs  config.rs  config_cmds.rs  config_defaults.rs  config_io.rs  config_types.rs  dragdrop_cmds.rs  error.rs  external_apps.rs  external_apps_cmds.rs  fs_ops_archive.rs  fs_ops_create.rs  fs_ops_delete.rs  fs_ops_mutate.rs  fs_ops_mutate_helpers.rs  fs_ops_preflight.rs  fs_ops_rename.rs  fs_ops_transfer.rs  fs_ops_transfer_copy.rs  fs_ops_transfer_helpers.rs  fs_ops_transfer_move.rs  fs_query.rs  fs_query_cmds.rs  gdrive_auth.rs  gdrive_auth_cmds.rs  gdrive_edit.rs  gdrive_edit_cmds.rs  gdrive_real.rs  gdrive_stub.rs  gdrive_token_store.rs  git_cmds.rs  git_ops.rs  lib.rs  log.rs  storage_provider.rs  system_cmds.rs  utils.rs  viewer_cmds.rs  (+3 more)
app/src-tauri/src/types/: config.rs  dto.rs  events.rs  files.rs  mod.rs
docs/: ADR-0001-storage-provider-boundary.md  ADR-0002-gdrive-oauth-security-baseline.md  ASSETS.md  CHANGELOG.ja.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOOGLE_DRIVE_SELF_SETUP.md  NOTICE.ja.md  (+18 more)
(+381 files in other folders)
